deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: image-registry.openshift-image-registry.svc:5000/sajidmahmud69-dev/flask-app:latest
        ports:
        - containerPort: 5000
